<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_msg"
            android:icon="@drawable/ic_message"
            android:title="@string/view_msg" />
        <item
            android:id="@+id/send_msg"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send_msg" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_portrait"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/exit_to_app"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/exit_to_app" />
    </group>
</menu>
