<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_logo"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/login_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/lost_password_tip_text"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_field"
        android:hint="@string/lost_password_text_field_placeholder"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost_password_frag_btn_txt"
        android:id="@+id/lost_password_frag_btn"
        style="@style/ButtonNormal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp" />

</LinearLayout>
